--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,10 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
+            shrinkResources false
             proguardFiles 'proguard-rules.pro'
-            debuggable false
+            debuggable true
             signingConfig signingConfigs.config
             proguardFile '/home/amiyo/AndroidProject/L_Pesa/l-pesa/app/proguard-rules.pro'
             buildConfigField("String", 'AWS_PULL', '"eu-central-1:a50ad0e2-bed2-42dc-a6b1-8f225f37f5f3"')
@@ -40,6 +40,7 @@ android {
             buildConfigField("String", 'BASE_URL', '"http://api-live.l-pesa.com/v2/"')
             /* buildConfigField("String", 'BASE_URL', '"http://40.76.68.66/v2/"') //http://20.36.32.60*/
             buildConfigField("String", 'BASE_URL_DEV', '"http://api-dev.l-pesa.com/v2/"')
+            buildConfigField("String", 'ZOOP_PRE_BASE_URL', '"https://preprod.aadhaarapi.com/"') //For Pre-Production
 
         }
         build {
@@ -55,6 +56,7 @@ android {
             buildConfigField("String", 'BASE_URL', '"http://api-live.l-pesa.com/v2/"')
             /* buildConfigField("String", 'BASE_URL', '"http://40.76.68.66/v2/"') //http://20.36.32.60*/
             buildConfigField("String", 'BASE_URL_DEV', '"http://api-dev.l-pesa.com/v2/"')
+            buildConfigField("String", 'ZOOP_PRE_BASE_URL', '"https://preprod.aadhaarapi.com/"') //For Pre-Production
 
         }
 
@@ -122,7 +124,7 @@ dependencies {
     implementation ('com.haozhang.libary:android-slanted-textview:1.2'){
         exclude group: "com.android.support"
     }
-
+    implementation 'sdk.zoop.one.offline_aadhaar:offline_aadhaar:1.0.7'
 
 
 }
