--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,9 +44,9 @@ android {
 
         }
         build {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            debuggable false
+            debuggable true
             signingConfig signingConfigs.config
             buildConfigField("String", 'AWS_PULL', '"eu-central-1:a50ad0e2-bed2-42dc-a6b1-8f225f37f5f3"')
             buildConfigField("String", 'AWS_BUCKET', '"lpesa-profile-identity-proof"')
