--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,8 @@ android {
         applicationId "com.app.l_pesa"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 27
-        versionName "1.0.27"
+        versionCode 28
+        versionName "1.0.28"
 
     }
     buildTypes {
@@ -109,10 +109,10 @@ dependencies {
     implementation 'com.amazonaws:aws-android-sdk-s3:2.6.+' //2.16.1
     implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.+' //2.16.1
     implementation 'com.google.android.gms:play-services-location:17.0.0'
-    implementation 'com.google.android.play:core:1.6.3'
+    implementation 'com.google.android.play:core:1.6.4+'
     implementation 'com.facebook.android:facebook-login:5.15.3'
     implementation 'com.google.android.gms:play-services-analytics:17.0.0'
-    implementation 'com.google.firebase:firebase-analytics:18.0.1'
+    implementation 'com.google.firebase:firebase-analytics:18.0.2'
     /* implementation 'com.amazonaws:aws-android-sdk-s3:2.13.5'
     implementation 'com.amazonaws:aws-android-sdk-cognito:2.13.5'*/
 
