--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,7 +107,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.github.warkiz.widget:indicatorseekbar:2.1.2'
-    implementation 'com.facebook.shimmer:shimmer:0.4.0@aar' //0.5.0
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation('com.github.bumptech.glide:glide:4.12.0') {
         exclude group: "com.android.support"
     }
