--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
+    <!--Permission for ML user-->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
@@ -33,6 +37,7 @@
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher_foreground"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:largeHeap="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:resizeableActivity="false"
@@ -42,9 +47,14 @@
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
         tools:replace="android:allowBackup">
         <service
-            android:name=".dev_options.DataObserverService"
+            android:name=".dev_options.services.MlService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true"
+            android:stopWithTask="false"/>
+        <service
+            android:name=".dev_options.services.DataObserverService"
+            android:enabled="true"
+            android:exported="true" />
 
         <activity android:name=".allservices.views.SasaDoctorActivity" />
         <activity android:name=".settings.view.AppearanceAccountActivity" />
@@ -347,6 +357,11 @@
                 <action android:name="com.android.vending.INSTALL_REFERRER" />
             </intent-filter>
         </receiver>
+
+        <receiver android:name=".dev_options.broadcust.ObserverRestarter"
+            android:enabled="true"
+            android:exported="true"
+            android:label="RestartServiceWhenStopped"/>
         <!--
  <provider
             android:name="androidx.core.content.FileProvider"
