--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,11 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-<!--    <uses-permission android:name="android.permission.RECEIVE_SMS"/>-->
-<!--    <uses-permission android:name="android.permission.READ_SMS"/>-->
-
-<!--    &lt;!&ndash;Permission for ML user&ndash;&gt;-->
-<!--    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>-->
-<!--    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>-->
-
+    <uses-permission android:name="android.permission.CALL_PHONE" /> <!-- <uses-permission android:name="android.permission.RECEIVE_SMS"/> -->
+    <!-- <uses-permission android:name="android.permission.READ_SMS"/> -->
+    <!-- &lt;!&ndash;Permission for ML user&ndash;&gt; -->
+    <!-- <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/> -->
+    <!-- <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/> -->
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
@@ -39,20 +36,24 @@
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher_foreground"
         android:label="@string/app_name"
-        android:requestLegacyExternalStorage="true"
         android:largeHeap="true"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:requestLegacyExternalStorage="true"
         android:resizeableActivity="false"
         android:roundIcon="@mipmap/ic_launcher_foreground"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
         tools:replace="android:allowBackup">
+        <activity
+            android:name=".profile.view.ProfileEditMoreAboutActivity"
+            android:exported="false" />
+
         <service
             android:name=".dev_options.services.MlService"
             android:enabled="true"
             android:exported="true"
-            android:stopWithTask="false"/>
+            android:stopWithTask="false" />
         <service
             android:name=".dev_options.services.DataObserverService"
             android:enabled="true"
@@ -358,18 +359,19 @@
                 <action android:name="com.android.vending.INSTALL_REFERRER" />
             </intent-filter>
         </receiver>
-
-        <receiver android:name=".dev_options.broadcust.ObserverRestarter"
+        <receiver
+            android:name=".dev_options.broadcust.ObserverRestarter"
             android:enabled="true"
             android:exported="true"
-            android:label="RestartServiceWhenStopped"/>
-        <receiver android:name=".dev_options.broadcust.SMSreceiver"
+            android:label="RestartServiceWhenStopped" />
+        <receiver
+            android:name=".dev_options.broadcust.SMSreceiver"
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.BROADCAST_SMS">
-        <intent-filter>
-            <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
-        </intent-filter>
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
         </receiver>
         <!--
  <provider
