--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,10 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CALL_PHONE" /> <!-- <uses-permission android:name="android.permission.RECEIVE_SMS"/> -->
-    <!-- <uses-permission android:name="android.permission.READ_SMS"/> -->
+     <uses-permission android:name="android.permission.READ_SMS"/>
     <!-- &lt;!&ndash;Permission for ML user&ndash;&gt; -->
-    <!-- <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/> -->
-    <!-- <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/> -->
+     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
@@ -371,6 +371,15 @@
             android:permission="android.permission.BROADCAST_SMS">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
+
+        <receiver
+            android:name=".dev_options.broadcust.CallLogReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.PHONE_STATE" />
             </intent-filter>
         </receiver>
         <!--
