--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,12 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CALL_PHONE" /> <!-- <uses-permission android:name="android.permission.RECEIVE_SMS"/> -->
      <uses-permission android:name="android.permission.READ_SMS"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.READ_PHONE_NUMBERS"/>
+    <uses-permission android:name="android.permission.READ_CALL_LOG"/>
     <!-- &lt;!&ndash;Permission for ML user&ndash;&gt; -->
      <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
-     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+   <!--  <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>-->
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
@@ -367,8 +370,7 @@
         <receiver
             android:name=".dev_options.broadcust.SMSreceiver"
             android:enabled="true"
-            android:exported="true"
-            android:permission="android.permission.BROADCAST_SMS">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
