--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_NUMBERS"/>
     <uses-permission android:name="android.permission.READ_CALL_LOG"/>
     <!-- &lt;!&ndash;Permission for ML user&ndash;&gt; -->
-     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+     <!--<uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>-->
    <!--  <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>-->
     <queries>
         <intent>
