--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,13 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CALL_PHONE" /> <!-- <uses-permission android:name="android.permission.RECEIVE_SMS"/> -->
-     <uses-permission android:name="android.permission.READ_SMS"/>
-    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
-    <uses-permission android:name="android.permission.READ_PHONE_NUMBERS"/>
-    <uses-permission android:name="android.permission.READ_CALL_LOG"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
+    <!-- <uses-permission android:name="android.permission.RECEIVE_SMS"/> -->
+<!--     <uses-permission android:name="android.permission.READ_SMS"/>-->
+<!--    <uses-permission android:name="android.permission.RECEIVE_SMS"/>-->
+<!--    <uses-permission android:name="android.permission.READ_PHONE_NUMBERS"/>-->
+<!--    <uses-permission android:name="android.permission.READ_CALL_LOG"/>-->
     <!-- &lt;!&ndash;Permission for ML user&ndash;&gt; -->
      <!--<uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>-->
    <!--  <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>-->
